# teardrop

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  Makefile  README.md  Teardrop.files  Teardrop.includes  TeardropSDK.sln  TeardropSDK_VC10.sln  TeardropSDK_VC12.sln  TeardropSDK_VC9.sln  init.sh
integrations/OpenGL/: BufferManagerOpenGL.cpp  BufferManagerOpenGL.h  BufferManagerOpenGLcpp  CMakeLists.txt  ExtensionManager.cpp  ExtensionManager.h  FragmentShaderOpenGL.cpp  FragmentShaderOpenGL.h  GLHeaders.h  IndexBufferOpenGL.cpp  IndexBufferOpenGL.h  IntegrationOpenGL.cpp  IntegrationOpenGL.h  Makefile  OpenGL.sln  ProgramOpenGL.cpp  ProgramOpenGL.h  RenderTargetOpenGL.cpp  RenderTargetOpenGL.h  RenderWindowOpenGL.cpp  RenderWindowOpenGL.h  RendererOpenGL.cpp  RendererOpenGL.h  ShaderManagerOpenGL.cpp  ShaderManagerOpenGL.h  Texture2DOpenGL.cpp  Texture2DOpenGL.h  TextureManagerOpenGL.cpp  TextureManagerOpenGL.h  VertexBufferOpenGL.cpp  VertexBufferOpenGL.h  VertexDeclarationOpenGL.cpp  VertexDeclarationOpenGL.h  VertexShaderOpenGL.cpp  VertexShaderOpenGL.h  ViewportOpenGL.cpp  ViewportOpenGL.h
integrations/Vulkan/: AllocatorsVulkan.h  BufferManagerVulkan.cpp  BufferManagerVulkan.h  CMakeLists.txt  CommandBufferVulkan.cpp  CommandBufferVulkan.h  CommandQueueVulkan.cpp  CommandQueueVulkan.h  IndexBufferVulkan.cpp  IndexBufferVulkan.h  IntegrationVulkan.cpp  IntegrationVulkan.h  PipelineVulkan.cpp  PipelineVulkan.h  RenderPassVulkan.cpp  RenderPassVulkan.h  RenderTargetVulkan.cpp  RenderTargetVulkan.h  RenderWindowVulkan.cpp  RenderWindowVulkan.h  RendererVulkan.cpp  RendererVulkan.h  SynchronizationPrimitiveVulkan.cpp  SynchronizationPrimitiveVulkan.h  VertexBufferVulkan.cpp  VertexBufferVulkan.h  ViewportVulkan.cpp  ViewportVulkan.h
integrations/XWindow/: CMakeLists.txt  InputXWindow.cpp  InputXWindow.h  Integration.cpp  Integration.h  Makefile
tech/: CMakeLists.txt  Config.h  FastDelegate.h  Makefile  Typedefs.h
tech/Animation/: Animation.cpp  Animation.h  AnimationBlender.cpp  AnimationBlender.h  BlendGraph.cpp  BlendGraph.h  Bone.cpp  Bone.h  CMakeLists.txt  Rig.cpp  Rig.h  SkeletonInstance.cpp  SkeletonInstance.h
tech/Asset/: Asset.cpp  Asset.h  AttributeMapAsset.cpp  AttributeMapAsset.h  CMakeLists.txt  HeightfieldAsset.cpp  HeightfieldAsset.h  LandscapeAsset.cpp  LandscapeAsset.h  Makefile  MeshAsset.cpp  MeshAsset.h  Package.cpp  Package.h  StaticMeshAsset.cpp  StaticMeshAsset.h  TextureAsset.cpp  TextureAsset.h
tech/Audio/: CMakeLists.txt  Emitter.cpp  Emitter.h  Renderer.cpp  Renderer.h  Sample.cpp  Sample.h  Stream.cpp  Stream.h
tech/Core/: CMakeLists.txt  Executable.cpp  Executable.h  Input.cpp  Input.h  InputEvent.h  Integration.cpp  Integration.h  Makefile  Singleton.h
tech/Game/: Avatar.cpp  Avatar.h  BeamWeapon.cpp  BeamWeapon.h  CMakeLists.txt  CameraController.cpp  CameraController.h  ChaseCamController.cpp  ChaseCamController.h  Command.h  CommandTarget.cpp  CommandTarget.h  Component.cpp  Component.h  ComponentHost.cpp  ComponentHost.h  Component_Animation.cpp  Component_Animation.h  Component_Audio.cpp  Component_Audio.h  Component_BasicPhysics.cpp  Component_BasicPhysics.h  Component_CameraInterface.cpp  Component_CameraInterface.h  Component_CharacterPhysics.cpp  Component_CharacterPhysics.h  Component_EquipmentSlot.cpp  Component_EquipmentSlot.h  Component_Interpolator.cpp  Component_Interpolator.h  Component_Physics.cpp  Component_Physics.h  Component_Render.cpp  Component_Render.h  Component_TerrainTile.cpp  Component_TerrainTile.h  CountdownTrigger.cpp  CountdownTrigger.h  DebugMeshRenderStep.cpp  DebugMeshRenderStep.h  (+89 more)
tech/Gfx/: AddColorExpression.cpp  AddColorExpression.h  Allocators.h  Attribute.cpp  Attribute.h  BufferManager.cpp  BufferManager.h  CMakeLists.txt  Camera.cpp  Camera.h  CommandBuffer.cpp  CommandBuffer.h  CommandQueue.cpp  CommandQueue.h  Common.cpp  Common.h  Connection.cpp  Connection.h  Exception.cpp  Exception.h  FragmentShader.cpp  FragmentShader.h  GLSLShaderRealizer.h  GfxBitmap.cpp  GfxBitmap.h  GfxCamera.cpp  GfxCamera.h  GfxCommon.cpp  GfxCommon.h  GfxIndexData.cpp  GfxIndexData.h  GfxLight.cpp  GfxLight.h  GfxMaterial.cpp  GfxMaterial.h  GfxMatrixPaletteCache.cpp  GfxMatrixPaletteCache.h  GfxMesh.cpp  GfxMesh.h  GfxMeshInstance.cpp  (+100 more)
tech/Math/: AABB.cpp  AABB.h  CMakeLists.txt  Intersection.h  Makefile  MathUtil.cpp  MathUtil.h  Matrix44.cpp  Matrix44.h  Plane.cpp  Plane.h  Quaternion.cpp  Quaternion.h  Query.cpp  Query.h  Ray.cpp  Ray.h  Sphere.cpp  Sphere.h  Transform.cpp  Transform.h  Triangle.cpp  Triangle.h  Vector2.cpp  Vector2.h  Vector4.cpp  Vector4.h
tech/Memory/: AllocationTracker.cpp  AllocationTracker.h  Allocators.cpp  Allocators.h  CMakeLists.txt  Makefile  Memory.cpp  Memory.h  MemoryRegion.cpp  MemoryRegion.h  Pool.h
tech/Network/: CMakeLists.txt  Message.cpp  Message.h  MessageFwd.h  Network.cpp  Network.h  Peer.cpp  Peer.h  Protocol.h  ProxyMessage.cpp  ProxyMessage.h  ReadMe.txt  RemotePeer.cpp  RemotePeer.h  Stream.h  Types.h
tech/Package/: CMakeLists.txt  DeferredResolution.h  Executable.cpp  Executable.h  Logic.cpp  Logic.h  Makefile  Package.cpp  Package.h  PackageMetadataSerializer.cpp  PackageMetadataSerializer.h  PackageSerializer.cpp  PackageSerializer.h  UUIDReader.cpp  UUIDReader.h  UUIDStreamReader.h  UUIDStreamWriter.h  UUIDWriter.cpp  UUIDWriter.h
tech/Physics/: Body.cpp  Body.h  CMakeLists.txt  CharacterProxy.cpp  CharacterProxy.h  CollisionFilter.cpp  CollisionFilter.h  HeightfieldShape.cpp  HeightfieldShape.h  Physics.h  Shape.cpp  Shape.h  World.cpp  World.h
tech/Ragdoll/: CMakeLists.txt  Ragdoll.cpp  Ragdoll.h  RagdollController.cpp  RagdollController.h  RagdollSystem.h
tech/Reflection/: CMakeLists.txt  ClassDef.cpp  ClassDef.h  EnumDef.cpp  EnumDef.h  Makefile  Object.cpp  Object.h  Property.h  PropertyDef.cpp  PropertyDef.h  Reflection.cpp  Reflection.h
tech/Resource/: Resource.cpp  Resource.h  ResourceFactory.cpp  ResourceFactory.h  ResourceHandle.h  ResourceManager.cpp  ResourceManager.h
tech/Script/: CMakeLists.txt  ScriptVM.cpp  ScriptVM.h  (+2 more)
(+1458 files in other folders)
