add_subdirectory(Animation)
add_subdirectory(Asset)
add_subdirectory(Audio)
add_subdirectory(Core)
add_subdirectory(Game)
add_subdirectory(Gfx)
add_subdirectory(Math)
add_subdirectory(Memory)
add_subdirectory(Network)
add_subdirectory(Package)
add_subdirectory(Physics)
add_subdirectory(Ragdoll)
add_subdirectory(Reflection)
add_subdirectory(Script)
add_subdirectory(Stream)
add_subdirectory(Thread)
add_subdirectory(UI)
add_subdirectory(Util)
add_subdirectory(VFX)
